--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ part1/courseinfo/node_modules/
 part1/part-d/node_modules/
 part1/unicafe/node_modules/
 part2/node_modules/
+part2/courseinfo/node_modules/
+part2/phonebook/node_modules
