--- a/part2/phonebook/package.json
+++ b/part2/phonebook/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "part2",
+  "name": "phonebook",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "json-server -p 3001 --watch db.json"
+    "server": "json-server --port 3001 --watch db.json"
   },
   "dependencies": {
     "axios": "^1.5.0",
