Before starting ex 3.1

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ part2/courseinfo/node_modules/
 part2/phonebook/node_modules/
 part2/countries/node_modules/
 part2/exchangerate-api/node_modules/
+part3/phonebook-backend/
+part3/notes-backend/node_modules/
