remove part3/notes-backend/ from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,4 @@ part2/phonebook/node_modules/
 part2/countries/node_modules/
 part2/exchangerate-api/node_modules/
 part3/phonebook-backend/
-part3/notes-backend/node_modules/
+part3/notes-backend/
